[gd_scene load_steps=17 format=3 uid="uid://bf1xrsy27bg72"]

[ext_resource type="PackedScene" uid="uid://eweijww3514t" path="res://enemy/enemy.tscn" id="1_7xlmh"]
[ext_resource type="Script" path="res://enemy/turret/turret_enemy.gd" id="2_nglpk"]
[ext_resource type="PackedScene" uid="uid://blmm5mho60lvj" path="res://assets/explosions/small_explosion.tscn" id="3_t8v2n"]
[ext_resource type="PackedScene" uid="uid://ba48j6vs8xv7q" path="res://assets/asteroid belt/sattelite.glb" id="3_xdfxl"]
[ext_resource type="Texture2D" uid="uid://dlx5oyl8gkhm3" path="res://assets/enemies/metal plating textures/metal_0077_color_2k.jpg" id="4_apoog"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="4_fuqbt"]
[ext_resource type="Texture2D" uid="uid://c5mh3853eb661" path="res://assets/enemies/metal plating textures/metal_0077_ao_2k.jpg" id="5_m4n5w"]
[ext_resource type="PackedScene" uid="uid://dnbvfoexm5ba5" path="res://assets/explosions/scrap_particles.tscn" id="5_woypg"]
[ext_resource type="Texture2D" uid="uid://dwkawfvfl1vh1" path="res://assets/enemies/metal plating textures/metal_0077_metallic_2k.jpg" id="6_ke51w"]
[ext_resource type="Texture2D" uid="uid://bbw8bdon0nel" path="res://assets/enemies/metal plating textures/metal_0077_normal_opengl_2k.png" id="7_v7bag"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fj8qo"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ru8kc"]
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_olcp4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nnk76"]
albedo_color = Color(0.65098, 0.74902, 1, 1)
albedo_texture = ExtResource("4_apoog")
metallic = 1.0
metallic_texture = ExtResource("6_ke51w")
normal_enabled = true
normal_texture = ExtResource("7_v7bag")
ao_enabled = true
ao_texture = ExtResource("5_m4n5w")

[sub_resource type="BoxShape3D" id="BoxShape3D_k5ts7"]
size = Vector3(1.645, 1.685, 1.25828)

[sub_resource type="BoxShape3D" id="BoxShape3D_ad601"]
size = Vector3(1.72, 1.743, 1.2203)

[node name="TurretEnemy" instance=ExtResource("1_7xlmh")]
collision_mask = 2
script = ExtResource("2_nglpk")
shoot_amount = 3
debug = false
activation_distance = 48.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.354348, 0)
shape = SubResource("BoxShape3D_fj8qo")

[node name="MeshInstance3D" type="MeshInstance3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 0.337231, 0, 0, 0, 1, 0, 0.330615, 0)
visible = false
material_override = SubResource("StandardMaterial3D_ru8kc")
mesh = SubResource("CylinderMesh_olcp4")

[node name="Sattelite" parent="." index="2" instance=ExtResource("3_xdfxl")]
transform = Transform3D(0.611874, 0, 0, 0, 0.611874, 0, 0, 0, 0.611874, 0, 0, 0)

[node name="Body" parent="Sattelite" index="0"]
material_override = SubResource("StandardMaterial3D_nnk76")

[node name="Support" parent="Sattelite" index="1"]
material_override = SubResource("StandardMaterial3D_nnk76")

[node name="Support_001" parent="Sattelite" index="2"]
material_override = SubResource("StandardMaterial3D_nnk76")

[node name="Grill" parent="Sattelite" index="3"]
material_override = SubResource("StandardMaterial3D_nnk76")

[node name="Head" parent="Sattelite" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.84888, 0)

[node name="Dish" parent="Sattelite/Head" index="0"]
transform = Transform3D(0.859565, 1.49012e-08, 0, -1.49012e-08, 0.859565, 0, 0, 0, 0.859564, 7.15256e-07, 0.449777, 0)
material_override = SubResource("StandardMaterial3D_nnk76")

[node name="Dish_001" parent="Sattelite/Head" index="1"]
transform = Transform3D(0.548461, 0, 0, 0, 0.548461, 0, 0, 0, 0.548461, 2.38419e-07, 0.449778, 0)
material_override = SubResource("StandardMaterial3D_nnk76")

[node name="HeadSupport" parent="Sattelite/Head" index="2"]
material_override = SubResource("StandardMaterial3D_nnk76")

[node name="ShootMarker" type="Marker3D" parent="Sattelite/Head" index="3"]
unique_name_in_owner = true
transform = Transform3D(1.63432, 0, 0, 2.98023e-08, 1.63432, -6.08833e-09, 0, -3.04417e-09, 1.63432, 0.00453019, 2.52264, 0.0333649)

[node name="CollisionShape3D" type="CollisionShape3D" parent="HealthArea" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.822671, 0.129041)
shape = SubResource("BoxShape3D_k5ts7")

[node name="SmallExplosion" parent="." index="4" instance=ExtResource("3_t8v2n")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0)

[node name="ScrapParticles" parent="." index="5" instance=ExtResource("5_woypg")]

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.13573, 0)
aabb = AABB(-1, -1.27928, -1, 2, 2.55856, 2)

[node name="ShootTimer" type="Timer" parent="." index="7"]
wait_time = 3.0

[node name="MissileTarget" parent="." index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.716257, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MissileTarget" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.136207, 0.110127)
shape = SubResource("BoxShape3D_ad601")

[node name="Awake" parent="StateChart/Active/Asleep" index="0"]
to = NodePath("../../Awake")

[node name="Awake" type="Node" parent="StateChart/Active" index="2"]
script = ExtResource("4_fuqbt")

[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="state_entered" from="StateChart/Active/Asleep" to="." method="_on_asleep_state_entered"]
[connection signal="state_entered" from="StateChart/Active/Awake" to="." method="_on_awake_state_entered"]

[editable path="Sattelite"]
